css/horizontalscroll.css
/* MOBILE FIRST BITCHEEES */


/*   CONTAINERS   */
#container {
  overflow-y: scroll;
  overflow-x: scroll;
  transform: none;
  transform-origin: top left;
  width:100vw;
  height: auto;
  z-index: -1;
  position:absolute;
}

#containerscroll {
  transform: none;
  transform-origin: top left;
  white-space: nowrap;
  margin: auto;
}

.boxwrapper {
  position:relative;
  width:100vw;
  height:300px;
  display:block;
  margin: 0 ;
  margin-bottom: 0px;
  padding:20px;
}

#container .box {
  width:calc(100% - 40px);
  height:calc(100% - 40px);
  display: block;
  margin: 0 auto;
  margin-bottom: 30px;

}

#container .box > div {
  width:calc(100% - 40px);
  height:calc(100% - 40px);
  z-index: 4;
  position: absolute;
}

.cover, .box, .info { position:absolute; }

.info {
  z-index:10;
  padding: 20px 10px 10px 20px;
  color: white;
  white-space: pre-wrap;
  width:calc(100% - 100px);
  height:calc(100% - 100px);
}


/*  BOXES   */
.yellow {
  background-color: #FADD02;
  opacity: 0.8;
  z-index: 2;
}

.violet {
  background-color: #6102FA;
  opacity: 0.8;
  z-index: 2;
}


/*   CoVER   */
.cover {
  width:calc(100% - 40px);
  height:calc(100% - 40px);
  background-size: cover;
  z-index: 1;
}

.one { background-image: url("../assets/covers/ref-cover.png"); }
.two { background-image: url("../assets/covers/bees-cover.jpg"); }
.three { background-image: url("../assets/covers/faden-cover.jpg"); }
.four { background-image: url("../assets/covers/balls_cover.jpg"); }


/*   BOX-STYLE   */
.info h3 {
  font-family: Archia SemiBold;
  font-size: 16pt;
  margin-top: -30px;
}

.info h2 {
  font-family: Archia SemiBold;
  font-size: 30pt;
  margin-top: -30px;
}


/* MEDIAQUERIES */
@media only screen and (min-width: 678px) {
  #container .box {
    width:calc(100% - 200px);
    height:calc(100% - 200px);
    display:inline-block;
    margin: 0 ;
    margin-bottom: 0px;
  }

  #container .box > div {
    width:calc(100% - 200px);
    height:calc(100% - 200px);
    z-index: 4;
    position: absolute;
  }

  .info {
    width:calc(100% - 200px);
    height:calc(100% - 200px);
    padding: 20px 50px 50px 50px;
  }

  #container .cover + div {
    color:#FFF;
    z-index: 3;
  }

  #container {
    overflow-y:scroll;
    overflow-x:scroll;

    transform: rotate(-90deg) translateX(-100%);
    -moz-transform: rotate(-90deg) translateX(-100%);
    -webkit-transform: rotate(-90deg) translateX(-100%);

    transform-origin: top left;
    -moz-transform-origin: top left;
    -webkit-transform-origin: top left;

    width:100vh;
    height:100vw;
  }

  #containerscroll {
    width:100vw;
    height:100vh;

    transform: rotate(90deg) translateY(-100vh);
    -moz-transform: rotate(90deg) translateY(-100vh);
    -webkit-transform: rotate(90deg) translateY(-100vh);

    transform-origin: top left;
    -moz-transform-origin: top left;
    -webkit-transform-origin: top left;

    white-space: nowrap;
    margin: 0;
  }

  .boxwrapper {
    width:100vw;
    height:100vh;
    display:inline-block;
    margin: 0 ;
    margin-bottom: 0px;
    }

  .boxwrapper a {
    padding:100px;
  }

  .cover {
    width:calc(100% - 200px);
    height:calc(100% - 200px);
    background-size: cover;
    z-index: 1;
  }

  .info h3 { 
    font-size: 30pt; 
    margin-top: 0px;
  }

  .info h2 { 
    font-size: 70pt; 
    margin-top: 0px;
  }

  /* HOVER TRANSITIONS HORIZOTALSCROLL */
  .boxwrapper:hover .yellow {
    background-color: #6102FA;
    transition: all .5s ease-in-out;
  }

  .boxwrapper:hover .violet {
    background-color: #FADD02;
    transition: all .5s ease-in-out;
  }

  .boxwrapper:hover {
    transform: scale(1.1);
    transition: all .5s ease-in-out;
  }
}

